--- a/features/intro/src/main/res/layout/intro_changelog.xml
+++ b/features/intro/src/main/res/layout/intro_changelog.xml
@@ -34,7 +34,7 @@
             android:padding="10dp"
             android:gravity="center"
             android:text="@string/changelog"
-            android:textColor="@color/background"
+            android:textColor="@color/white"
             android:textSize="24sp"
             android:textStyle="bold" />
 
