--- a/features/intro/src/main/res/layout/intro_pager.xml
+++ b/features/intro/src/main/res/layout/intro_pager.xml
@@ -28,7 +28,7 @@
         android:padding="20dp"
         android:gravity="center"
         android:text="@string/intro_pager"
-        android:textColor="@color/background"/>
+        android:textColor="@color/white"/>
 
 
     <RelativeLayout
