--- a/features/times/src/main/res/layout/vakit_addcity.xml
+++ b/features/times/src/main/res/layout/vakit_addcity.xml
@@ -53,7 +53,9 @@
         android:layout_alignParentRight="true"
         android:background="@color/foregroundSecondary"
         android:gravity="center"
-        android:padding="5dp" />
+        android:padding="5dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/search"
