--- a/features/widget/src/main/res/layout/widget_4x1.xml
+++ b/features/widget/src/main/res/layout/widget_4x1.xml
@@ -30,19 +30,16 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:paddingLeft="300dp"
-        android:paddingStart="300dp"
         android:paddingTop="60dp" />
 
     <RelativeLayout
         android:id="@+id/widget_layout"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_alignBottom="@+id/padder"
-        android:layout_alignEnd="@+id/padder"
         android:layout_alignLeft="@+id/padder"
-        android:layout_alignRight="@+id/padder"
-        android:layout_alignStart="@+id/padder"
         android:layout_alignTop="@+id/padder"
+        android:layout_alignRight="@+id/padder"
+        android:layout_alignBottom="@+id/padder"
         android:layout_gravity="center"
         android:background="@drawable/widget_dark"
         android:padding="1dp">
@@ -53,9 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_toLeftOf="@+id/countdown"
-            android:layout_toStartOf="@+id/countdown"
+            android:gravity="left"
             android:lines="1"
             android:padding="2dp"
             android:text="City"
@@ -67,7 +62,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/city"
-            android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:countDown="true"
             android:textColor="#ffffff"
