--- a/features/widget/src/main/res/layout/widget_2x2.xml
+++ b/features/widget/src/main/res/layout/widget_2x2.xml
@@ -32,14 +32,12 @@
         android:id="@+id/widget_layout"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_alignBottom="@+id/padder"
-        android:layout_alignEnd="@+id/padder"
-        android:layout_alignStart="@+id/padder"
-        android:layout_alignTop="@+id/padder"
-        android:layout_gravity="center"
-        android:background="@drawable/widget_dark"
         android:layout_alignLeft="@+id/padder"
-        android:layout_alignRight="@+id/padder">
+        android:layout_alignTop="@+id/padder"
+        android:layout_alignRight="@+id/padder"
+        android:layout_alignBottom="@+id/padder"
+        android:layout_gravity="center"
+        android:background="@drawable/widget_dark">
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -64,8 +62,6 @@
                 android:id="@+id/texts"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toStartOf="@+id/times"
-                android:layout_alignParentStart="true"
                 android:layout_below="@+id/city"
                 android:layout_alignParentLeft="true"
                 android:layout_toLeftOf="@+id/times">
@@ -124,59 +120,58 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/city"
-                android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true">
 
                 <TextView
                     android:id="@+id/fajr"
-                    android:gravity="right"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:gravity="right"
                     android:text="00:00"
                     android:textColor="#ffffff" />
 
                 <TextView
                     android:id="@+id/sun"
-                    android:gravity="right"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/fajr"
+                    android:gravity="right"
                     android:text="00:00"
                     android:textColor="#ffffff" />
 
                 <TextView
                     android:id="@+id/zuhr"
-                    android:gravity="right"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/sun"
+                    android:gravity="right"
                     android:text="00:00"
                     android:textColor="#ffffff" />
 
                 <TextView
                     android:id="@+id/asr"
-                    android:gravity="right"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/zuhr"
+                    android:gravity="right"
                     android:text="00:00"
                     android:textColor="#ffffff" />
 
                 <TextView
                     android:id="@+id/maghrib"
-                    android:gravity="right"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/asr"
+                    android:gravity="right"
                     android:text="00:00"
                     android:textColor="#ffffff" />
 
                 <TextView
                     android:id="@+id/ishaa"
-                    android:gravity="right"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/maghrib"
+                    android:gravity="right"
                     android:text="00:00"
                     android:textColor="#ffffff" />
             </RelativeLayout>
@@ -185,8 +180,8 @@
                 android:id="@+id/countdown"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
                 android:layout_below="@+id/texts"
+                android:layout_centerHorizontal="true"
                 android:countDown="true"
                 android:textColor="#ffffff" />
         </RelativeLayout>
