--- a/features/times/src/main/res/layout-v24/notification_layout.xml
+++ b/features/times/src/main/res/layout-v24/notification_layout.xml
@@ -10,7 +10,7 @@
   ~ Unless required by applicable law or agreed to in writing, software
   ~ distributed under the License is distributed on an "AS IS" BASIS,
   ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
+  ~ See the License for the dpecific language governing permissions and
   ~ limitations under the License.
   -->
 
@@ -20,9 +20,9 @@
     android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="vertical"
-    android:paddingStart="24sp"
+    android:paddingStart="24dp"
     android:paddingTop="8dp"
-    android:paddingEnd="24sp"
+    android:paddingEnd="24dp"
     android:paddingBottom="8dp">
 
     <LinearLayout
@@ -31,8 +31,8 @@
         android:paddingBottom="8dp">
 
         <ImageView
-            android:layout_width="16sp"
-            android:layout_height="16sp"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
             android:layout_gravity="center"
             android:layout_marginEnd="4dp"
             android:src="@drawable/ic_abicon"
@@ -45,14 +45,14 @@
             android:layout_weight="1"
             android:text="Braunschweig"
             android:textColor="@color/colorPrimary"
-            android:textSize="14sp" />
+            android:textSize="14dp" />
 
         <Chronometer
             android:id="@+id/countdown"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:countDown="true"
-            android:textSize="14sp" />
+            android:textSize="14dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -72,7 +72,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="00:00"
-                android:textSize="14sp" />
+                android:textSize="14dp" />
 
             <TextView
                 android:id="@+id/fajr"
@@ -81,7 +81,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/fajr"
-                android:textSize="12sp" />
+                android:textSize="12dp" />
         </LinearLayout>
 
         <TextView
@@ -101,7 +101,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="00:00"
-                android:textSize="14sp" />
+                android:textSize="14dp" />
 
             <TextView
                 android:id="@+id/sun"
@@ -110,7 +110,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/sun"
-                android:textSize="12sp" />
+                android:textSize="12dp" />
         </LinearLayout>
 
         <TextView
@@ -130,7 +130,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="00:00"
-                android:textSize="14sp" />
+                android:textSize="14dp" />
 
             <TextView
                 android:id="@+id/zuhr"
@@ -139,7 +139,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/zuhr"
-                android:textSize="12sp" />
+                android:textSize="12dp" />
         </LinearLayout>
 
         <TextView
@@ -159,7 +159,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="00:00"
-                android:textSize="14sp" />
+                android:textSize="14dp" />
 
             <TextView
                 android:id="@+id/asr"
@@ -168,7 +168,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/asr"
-                android:textSize="12sp" />
+                android:textSize="12dp" />
         </LinearLayout>
 
         <TextView
@@ -188,7 +188,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="00:00"
-                android:textSize="14sp" />
+                android:textSize="14dp" />
 
             <TextView
                 android:id="@+id/maghrib"
@@ -197,7 +197,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/maghrib"
-                android:textSize="12sp" />
+                android:textSize="12dp" />
         </LinearLayout>
 
         <TextView
@@ -217,7 +217,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="00:00"
-                android:textSize="14sp" />
+                android:textSize="14dp" />
 
             <TextView
                 android:id="@+id/ishaa"
@@ -226,7 +226,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/ishaa"
-                android:textSize="12sp" />
+                android:textSize="12dp" />
         </LinearLayout>
 
 
