--- a/features/times/src/main/res/layout-v24/notification_layout.xml
+++ b/features/times/src/main/res/layout-v24/notification_layout.xml
@@ -21,14 +21,14 @@
     android:gravity="center"
     android:orientation="vertical"
     android:paddingStart="24dp"
-    android:paddingTop="8dp"
+    android:paddingTop="6dp"
     android:paddingEnd="24dp"
-    android:paddingBottom="8dp">
+    android:paddingBottom="6dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="4dp">
+        android:paddingBottom="2dp">
 
         <ImageView
             android:layout_width="16dp"
@@ -70,6 +70,8 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:paddingStart="2dp"
+                android:paddingEnd="2dp"
                 android:text="00:00"
                 android:textSize="14dp" />
 
@@ -99,6 +101,8 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:paddingStart="2dp"
+                android:paddingEnd="2dp"
                 android:text="00:00"
                 android:textSize="14dp" />
 
@@ -128,6 +132,8 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:paddingStart="2dp"
+                android:paddingEnd="2dp"
                 android:text="00:00"
                 android:textSize="14dp" />
 
@@ -157,6 +163,8 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:paddingStart="2dp"
+                android:paddingEnd="2dp"
                 android:text="00:00"
                 android:textSize="14dp" />
 
@@ -186,6 +194,8 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:paddingStart="2dp"
+                android:paddingEnd="2dp"
                 android:text="00:00"
                 android:textSize="14dp" />
 
@@ -215,6 +225,8 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:paddingStart="2dp"
+                android:paddingEnd="2dp"
                 android:text="00:00"
                 android:textSize="14dp" />
 
